libs/enums/test/enum_class/conversion/implicit_conversion_to_bool_fails.cpp
//////////////////////////////////////////////////////////////////////////////
//
// (C) Copyright Vicente J. Botet Escriba 2011.
// Distributed under the Boost
// Software License, Version 1.0.
// (See accompanying file LICENSE_1_0.txt or
// copy at http://www.boost.org/LICENSE_1_0.txt)
//
// See http://www.boost.org/libs/enums for documentation.
//
//////////////////////////////////////////////////////////////////////////////

#include "./EnumClass.hpp"

void fail() {

  { // The wrapper can be used on a if (is not convertible to bool)
    Ex::EnumClass e;
    bool b = e; // error
    if (e) // error
        b=false;
  }

}
